--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "Amit Mandloi",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "moment": "^2.30.1",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0"
   }
